Tilføjet video til index til mobil og tilføjet google analytics

--- a/index.html
+++ b/index.html
@@ -2,6 +2,15 @@
 <html lang="en" id="top">
 
 <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-9TS8B85ZH7"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-9TS8B85ZH7');
+    </script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Casper Reedtz Andersen - Portfolio</title>
@@ -13,7 +22,7 @@
 </head>
 
 <body class="bimg">
-<div id="backgroundelement"></div>
+    <div id="backgroundelement"></div>
     <h1 class="ml12">Casper Reedtz Andersen</h1>
     <h2 class="h2intro">CReedtz1@gmail.com</h2>
     <h3 class="h3intro">Student @ Zealand</h3>
@@ -30,7 +39,7 @@
             multimedia design & communication. <br> <br> I live in Slagelse with my girlfriend and I currently work at
             Coop Danmark in Albertslund, as a front office assisent to support myself financially while i study. <br>
             <br> After I'm done studying multimedia, I'll continue studying web development, as my current goal
-             is becomming a great web developer.</p>
+            is becomming a great web developer.</p>
         <a class="expand" id="pwhoidexpand" href="javascript:void(0)" onclick="expandpwho()">Expand</a>
         <a class="shorten" id="pwhoidshorten" href="javascript:void(0)" onclick="shortenpwho()">Shorten</a>
     </section>
@@ -71,6 +80,16 @@
             <img src="images/space.png" alt="">
             <a href="space.html">More about Outer Travels here</a>
         </div>
+    </section>
+
+    <section class="project">
+        <h2>Portrait of Martin</h2>
+        <h3>First ever video at Zealand</h3>
+        <h3>Ended early October 2020</h3>
+        <iframe class="videoframe" src="https://www.youtube.com/embed/p2w84fZbufo" frameborder="0"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+        allowfullscreen>
+    </iframe>
     </section>
 
     <section>
