--- a/rhythm.html
+++ b/rhythm.html
@@ -2,6 +2,15 @@
 <html lang="en">
 
 <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-9TS8B85ZH7"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-9TS8B85ZH7');
+    </script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rhythm Studio - Dance Project</title>
@@ -15,15 +24,20 @@
         <h2 class="projecth2">Dance Project - Part 2</h2>
         <h3 class="projecth3">Lead coder & Organizer</h3>
         <h4 class="projecth4">For mobile and desktop</h4>
-        <p>This project was the <b>2nd part of our dance theme,</b>  in this project we recieved <b>another groups website,</b> had to
-            work upon it and make it <b>responsive for desktop.</b> This projects theme was a <b>bollywood dancing school.</b> 
+        <p>This project was the <b>2nd part of our dance theme,</b> in this project we recieved <b>another groups
+                website,</b> had to
+            work upon it and make it <b>responsive for desktop.</b> This projects theme was a <b>bollywood dancing
+                school.</b>
             <br><br>
-        <b>My main role </b>for this project was <b>organizing</b> our work, being responsible for <b>some</b> of our <b>design choices</b> and
-    <b>helping everyone with coding.</b>
+            <b>My main role </b>for this project was <b>organizing</b> our work, being responsible for <b>some</b> of
+            our <b>design choices</b> and
+            <b>helping everyone with coding.</b>
             <br> <br>
-            As we recieved the project from the other group, we realised that we had to <b>rework their current design</b> to
-            something new, so we quickly did some <b>brainstorming</b> and got some <b>individual moodboards</b> ready <b>and made our
-        final moodboard.</b> </p>
+            As we recieved the project from the other group, we realised that we had to <b>rework their current
+                design</b> to
+            something new, so we quickly did some <b>brainstorming</b> and got some <b>individual moodboards</b> ready
+            <b>and made our
+                final moodboard.</b> </p>
         <img class="rhythmmood" src="/images/rhythmmood.png" alt="rhythm moodboard">
     </section>
     <div class="rhythmsplitbar"></div>
@@ -33,19 +47,25 @@
         </div>
     </div>
     <section class="projectsection">
-        <p>We then started <b>making sketches and wireframes</b> for our website, made some <b>final mockups</b> with our chosen
-            design and name on it and then we <b>started working on the code.</b> As we choose to redo the other groups work
-            from scratch, it meant that this was <b>the first time we had to make a site for both mobile and desktop.</b> 
+        <p>We then started <b>making sketches and wireframes</b> for our website, made some <b>final mockups</b> with
+            our chosen
+            design and name on it and then we <b>started working on the code.</b> As we choose to redo the other groups
+            work
+            from scratch, it meant that this was <b>the first time we had to make a site for both mobile and
+                desktop.</b>
             <br> <br>
             So we
-            got to work on the <b>mobile version</b> making pages that had an <b>"okay" flow,</b> because we <b>hadnt been totally clear
-            on when to use certain elements, colors and fonts.</b> </p>
+            got to work on the <b>mobile version</b> making pages that had an <b>"okay" flow,</b> because we <b>hadnt
+                been totally clear
+                on when to use certain elements, colors and fonts.</b> </p>
         <img class="rhythmimg1" src="/images/rhythmmobile1.png" alt="rhythm mobile pages part 1">
     </section>
     <section class="projectsection rhythmfinal">
-        <p>The page <b>I was responsible for</b> making, was <b>our sign up page and our menu.</b> As we continued making our
-            website and <b>started</b> to code <b>the desktop version,</b> we slowly finished the site, but as a result of our
-        <b>miscommunication</b> had some <b>flaws in its cohesiveness.</b>
+        <p>The page <b>I was responsible for</b> making, was <b>our sign up page and our menu.</b> As we continued
+            making our
+            website and <b>started</b> to code <b>the desktop version,</b> we slowly finished the site, but as a result
+            of our
+            <b>miscommunication</b> had some <b>flaws in its cohesiveness.</b>
         </p>
         <img class="rhythmimg2" src="/images/rhythmdesk2.png" alt="rhythm desktop page">
     </section>
