--- a/space.html
+++ b/space.html
@@ -2,6 +2,15 @@
 <html lang="en">
 
 <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-9TS8B85ZH7"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-9TS8B85ZH7');
+    </script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Outer Travels - Space Project</title>
@@ -14,42 +23,53 @@
     <section class="projectsection">
         <h2 class="projecth2">Space Project</h2>
         <h3 class="projecth3">Project Leader and Designer</h3>
-        <h4 class="projecth4">For desktop only</h4> 
-        <p>As our <b>first project,</b> Outer Travels was a space themed project, where we had to make a website around a
+        <h4 class="projecth4">For desktop only</h4>
+        <p>As our <b>first project,</b> Outer Travels was a space themed project, where we had to make a website around
+            a
             company, that had some <b>product in space.</b> <br> <br> <b>My main role</b> in this project, was being the
-        <b>project leader</b> and with us <b>only being 2 out of the 5 people</b> we were supposed to be <b>in this project,</b> we
+            <b>project leader</b> and with us <b>only being 2 out of the 5 people</b> we were supposed to be <b>in this
+                project,</b> we
             didn't have many opportunities to do something grand.</p>
     </section>
     <section class="projectsection">
-        <p>This project was for <b>desktop only,</b> as an <b>introduction to html coding.</b> We started the project of by
-        <b>brainstorming</b> ways to make a website centered around space, we decided to make a <b>dark color palette</b> and try
-            and draw in <b>a lot of black.</b> We came up with the idea to make a website where you could choose to <b>travel to
-            planets like a vacation. </b>
+        <p>This project was for <b>desktop only,</b> as an <b>introduction to html coding.</b> We started the project of
+            by
+            <b>brainstorming</b> ways to make a website centered around space, we decided to make a <b>dark color
+                palette</b> and try
+            and draw in <b>a lot of black.</b> We came up with the idea to make a website where you could choose to
+            <b>travel to
+                planets like a vacation. </b>
         </p>
         <img class="spaceimg1" src="/images/space.png" alt="space outertravels home page">
-        </section>
-        <div class="rhythmsplitbar"></div>
-        <div class="arrowcontinue">
-            <div>
-                <img src="images/arrowsouth.svg" alt="arrow pointing down to continue">
-            </div>
+    </section>
+    <div class="rhythmsplitbar"></div>
+    <div class="arrowcontinue">
+        <div>
+            <img src="images/arrowsouth.svg" alt="arrow pointing down to continue">
         </div>
-        <section class="projectsection">
-            <p>
+    </div>
+    <section class="projectsection">
+        <p>
             We then had to <b>make a banner</b> and to not make the website totally black we
-            decided <b>it needed some color.</b> Being a very <b>small team of 2</b> we decided to start of by <b>making our pages
-            separately.</b> We later learnt that <b>it wasn't ideal
-            to make things separately,</b> as it <b>caused some issues</b> in terms of not having the same vision for the project,
+            decided <b>it needed some color.</b> Being a very <b>small team of 2</b> we decided to start of by <b>making
+                our pages
+                separately.</b> We later learnt that <b>it wasn't ideal
+                to make things separately,</b> as it <b>caused some issues</b> in terms of not having the same vision
+            for the project,
             when making the website.</p>
-            <img class="spacebanner" src="/images/space-banner.jpg" alt="space banner outer travels">
+        <img class="spacebanner" src="/images/space-banner.jpg" alt="space banner outer travels">
         <img class="spaceimg2" src="/images/spacepage2.png" alt="space outertravels mars page">
     </section>
     <section class="projectsection spacefinal">
-        <p><b>I was responsible for creating our landing page with a banner,</b> differnet planets you could travel to and <b>I made a logo</b>
-            to accompany our site to further sell it as a company. One of the <b>major problems</b> in this project was that we had <b>no
-            experience in coding html in groups</b> and <b>didn't have any tools to use,</b> to make it coding together easier for us. <br>
-            <br> But in the end, we ended up with <b>a project we weren't fully happy with,</b> but we <b>learnt a lot from our
-            mistakes</b> made in this project.</p>
+        <p><b>I was responsible for creating our landing page with a banner,</b> differnet planets you could travel to
+            and <b>I made a logo</b>
+            to accompany our site to further sell it as a company. One of the <b>major problems</b> in this project was
+            that we had <b>no
+                experience in coding html in groups</b> and <b>didn't have any tools to use,</b> to make it coding
+            together easier for us. <br>
+            <br> But in the end, we ended up with <b>a project we weren't fully happy with,</b> but we <b>learnt a lot
+                from our
+                mistakes</b> made in this project.</p>
     </section>
     <a class="tostart" href="index.html">Back to projects</a>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
