--- a/swing.html
+++ b/swing.html
@@ -2,6 +2,15 @@
 <html lang="en">
 
 <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-9TS8B85ZH7"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-9TS8B85ZH7');
+    </script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Swinging Shoes - Dance Project</title>
@@ -15,14 +24,21 @@
         <h2 class="projecth2">Dance Project - Part 2</h2>
         <h3 class="projecth3">Research & Design Managing</h3>
         <h4 class="projecth4">For mobile only</h4>
-        <p>As this project was <b>our second project ever,</b> it was all about <b>learning</b>  how to make a website for <b>mobile.</b>  Our
-            project theme this time, was about a <b>swingdance dance studio</b> and was the <b>first part</b> of our dance themed
-            projects, where in the <b>next part we swap projects</b>  and work upon and redo some parts of each others projects. <br> <br> <b>My main role</b>  in this project was
-            doing some <b>primary research,</b>  find out what kind of people dance swing and <b>making design decisions.</b> 
-            <br> <br> We started off our research by doing some <b>desk research</b> and ended up finding a little dance school
-            in Copenhagen named <b>"Happy Feet",</b>  which <b>one of my project members and I visited.</b>  We took <b>inspiration</b>  from the
-            vibe at the <b>dance school</b>  and from other <b>similar websites</b>  to decide what kind of style we were looking and made a <b>
-            color palette.</b> 
+        <p>As this project was <b>our second project ever,</b> it was all about <b>learning</b> how to make a website
+            for <b>mobile.</b> Our
+            project theme this time, was about a <b>swingdance dance studio</b> and was the <b>first part</b> of our
+            dance themed
+            projects, where in the <b>next part we swap projects</b> and work upon and redo some parts of each others
+            projects. <br> <br> <b>My main role</b> in this project was
+            doing some <b>primary research,</b> find out what kind of people dance swing and <b>making design
+                decisions.</b>
+            <br> <br> We started off our research by doing some <b>desk research</b> and ended up finding a little dance
+            school
+            in Copenhagen named <b>"Happy Feet",</b> which <b>one of my project members and I visited.</b> We took
+            <b>inspiration</b> from the
+            vibe at the <b>dance school</b> and from other <b>similar websites</b> to decide what kind of style we were
+            looking and made a <b>
+                color palette.</b>
         </p>
         <img class="swingimg1" src="/images/swingfarve.png" alt="swing color palette">
     </section>
@@ -33,20 +49,26 @@
         </div>
     </div>
     <section class="projectsection">
-        <p class="swingp1"> Then it was <b>time for some sketching, wireframing and mockups,</b> trying to appeal to a <b>vintage crowd</b> 
+        <p class="swingp1"> Then it was <b>time for some sketching, wireframing and mockups,</b> trying to appeal to a
+            <b>vintage crowd</b>
             while stile being an <b>easy to use modern website.</b> </p>
         <img class="swingimg2" src="/images/swingdesign.png" alt="swing design phase 1">
     </section>
     <section class="projectsection">
-        <p>When we started to <b>code our website</b>  we ran into <b>alot of problems,</b> this being our second project and our <b>first
-            project for mobile,</b> it was alot harder to cope with all the new things we had learnt about. But <b>we managed to pull
-            through</b>  and got close to what we originally were looking for in our website. It wasn't fully what we wanted out of it though and <b>could definitely be improved upon.</b> <br><br>
-        <b>I was responsible for making</b> the page where you are able to see <b>what classes are held when and what the upcomming events are.</b> (The page in the middle, down below) </p>
+        <p>When we started to <b>code our website</b> we ran into <b>alot of problems,</b> this being our second project
+            and our <b>first
+                project for mobile,</b> it was alot harder to cope with all the new things we had learnt about. But
+            <b>we managed to pull
+                through</b> and got close to what we originally were looking for in our website. It wasn't fully what we
+            wanted out of it though and <b>could definitely be improved upon.</b> <br><br>
+            <b>I was responsible for making</b> the page where you are able to see <b>what classes are held when and
+                what the upcomming events are.</b> (The page in the middle, down below) </p>
         <img class="swingimg3" src="/images/swing.png" alt="swingdance mobile pages">
     </section>
     <section class="projectsection">
-        <p class="swingfinal">At the end of this project we had a <b>final showcase</b> and then afterwards we <b>swapped our swingdance website with
-            another groups project,</b> see more about <b>part 2 in the Rhythm Studio project.</b></p>
+        <p class="swingfinal">At the end of this project we had a <b>final showcase</b> and then afterwards we
+            <b>swapped our swingdance website with
+                another groups project,</b> see more about <b>part 2 in the Rhythm Studio project.</b></p>
     </section>
     <a class="tostart" href="index.html">Back to projects</a>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
