--- a/xenos.html
+++ b/xenos.html
@@ -2,6 +2,15 @@
 <html lang="en">
 
 <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-9TS8B85ZH7"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-9TS8B85ZH7');
+    </script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Xenos - Car Project</title>
@@ -41,28 +50,37 @@
         <div>
             <img src="images/arrowsouth.svg" alt="arrow pointing down to continue">
         </div>
-        
+
     </div>
     <section class="projectsection">
-        <p class="xenosp1">Now that we had a <b>clear vision</b> of what our brand should include, we started on our <b>design</b> and
+        <p class="xenosp1">Now that we had a <b>clear vision</b> of what our brand should include, we started on our
+            <b>design</b> and
             after settling
-            down on a more neutral look, <b>we began sketching, wireframing, making mockups and finally coding.</b> <br> <br>
-            In the coding part, I was <b>responsible for</b> creating a <b>website for craftsmen and making our pullout menu</b> to
+            down on a more neutral look, <b>we began sketching, wireframing, making mockups and finally coding.</b> <br>
+            <br>
+            In the coding part, I was <b>responsible for</b> creating a <b>website for craftsmen and making our pullout
+                menu</b> to
             connect all of our webpages together.</p>
         <img class="xenosimg1" src="/images/xenosmobile1.png" alt="xenos mobile pages part 1">
     </section>
     <section class="projectsection">
         <p class="xenosp2">
-            We then had a <b>showcase of our work from part 1</b> and after getting <b>feedback</b>, it was back to the drawingboard
+            We then had a <b>showcase of our work from part 1</b> and after getting <b>feedback</b>, it was back to the
+            drawingboard
             to <b>begin part 2.</b>
-            <br> <br> In part 2 I was <b>responsible for making our contentplan,</b> deciding on what kind of content should be
-            put out for our customers, here <b>I created a webpage with the current campaigns Xenos was running</b>. Updated the
+            <br> <br> In part 2 I was <b>responsible for making our contentplan,</b> deciding on what kind of content
+            should be
+            put out for our customers, here <b>I created a webpage with the current campaigns Xenos was running</b>.
+            Updated the
             menu and did some <b>fixing on other pages to have more cohesiveness</b>.
         </p>
         <img class="xenosimg2" src="/images/xenosmobile2.png" alt="xenos mobile pages part 2">
-        <p class="xenosp3">Finally <b> at the end,</b> we made the website <b>responsive to desktop</b> where we added more <b>whitespace</b>
-            and tried to get a bit more <b>creative with</b> some of our <b>design decisions</b>. But ultimately, we had <b>more we could
-            improve upon</b> in our website design, to make it <b>more appealing to our target group and fix some errors.</b></p>
+        <p class="xenosp3">Finally <b> at the end,</b> we made the website <b>responsive to desktop</b> where we added
+            more <b>whitespace</b>
+            and tried to get a bit more <b>creative with</b> some of our <b>design decisions</b>. But ultimately, we had
+            <b>more we could
+                improve upon</b> in our website design, to make it <b>more appealing to our target group and fix some
+                errors.</b></p>
         <img class="xenosimg3" src="/images/xenoskampimg.png" alt="xenos final page">
     </section>
 
