Lavet om mig side og kontakt info

--- a/indexbackup.html
+++ b/indexbackup.html
@@ -35,7 +35,13 @@
         <div class="borderwhoright" id="borderright"></div>
         <p class="pwho" id="pwhoid">Hey! I'm Casper and I'm a student at Zealand Academy, currently studying multimedia
             design & communication.</p>
-            <a class="learnme" href="about.html">Learn more about me here!</a>
+        <p class="pwho" id="pwhodeskid">Hey! I'm Casper and I'm a student at Zealand Academy, currently studying
+            multimedia design & communication. <br> <br> I live in Slagelse with my girlfriend and I currently work at
+            Coop Danmark in Albertslund, as a front office assisent to support myself financially while i study. <br>
+            <br> After I'm done studying multimedia, I'll continue studying web development, as my current goal
+            is becomming a great web developer.</p>
+        <a class="expand" id="pwhoidexpand" href="javascript:void(0)" onclick="expandpwho()">Expand</a>
+        <a class="shorten" id="pwhoidshorten" href="javascript:void(0)" onclick="shortenpwho()">Shorten</a>
     </section>
 
     <section class="projectsintro">
