Tilføjet kontakt info i bunden af siderne, lavet about side responsive, gjort video responsive

--- a/about.html
+++ b/about.html
@@ -21,7 +21,7 @@
     <a href="index.html"><img class="arrowback" src="images/arrowwest.svg" alt=""></a>
     <h1 class="projecth1 ml12 abouth1">Who am I?</h1>
     <img class="imgabout" src="/images/me.jpg" alt="image of me">
-    <section class="projectsection">
+    <section class="projectsection aboutme">
         <p>
             Hey! You might be wondering, <b> what kind of a person I am</b> and to that I say... <br>
 
@@ -43,13 +43,14 @@
                <b>becoming a web developer.</b>
         </p>
     </section>
-    <section class="projectsection">
+    
+    <section class="projectsection aboutsection">
         <h2 class="projecth2">
             Current Occupations:
         </h2>
         <h3 class="abouth3">
-            I currently study <b> Multimedia Design & Communication</b>
-            at Zealand Academy, 4600 Køge
+            I currently study <b> Multimedia Design & Communication
+            at Zealand Academy,</b> 4600 Køge
         </h3>
         <h4 class="abouth4">
             Since August 2020
