--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             design & communication.</p>
             <a class="learnme" href="about.html">Learn more about me here!</a>
     </section>
-
+    <div class="frontsplitbar"></div>
     <section class="projectsintro">
         <h2>Projects</h2>
         <div>
@@ -76,8 +76,8 @@
         </div>
     </section>
 
-    <section class="project">
-        <h2>Portrait of Martin</h2>
+    <section class="project pvideo">
+        <h2>Portrait of Martin (Danish)</h2>
         <h3>First ever video at Zealand</h3>
         <h3>Ended early October 2020</h3>
         <iframe class="videoframe" src="https://www.youtube.com/embed/p2w84fZbufo" frameborder="0"
