--- a/rhythm.html
+++ b/rhythm.html
@@ -69,7 +69,18 @@
         </p>
         <img class="rhythmimg2" src="/images/rhythmdesk2.png" alt="rhythm desktop page">
     </section>
-    <a class="tostart" href="index.html">Back to start</a>
+    <section class="contactinfo">
+        <h2>
+            Contact me at:
+        </h2>
+        <h3>
+            Mail: CReedtz1@gmail.com <br>
+            Phone: 27512422 
+        </h3>
+    </section>
+
+
+    <a class="tostart" href="index.html">Back to projects</a>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
     <script src="myjs.js"></script>
