--- a/xenos.html
+++ b/xenos.html
@@ -84,7 +84,18 @@
         <img class="xenosimg3" src="/images/xenoskampimg.png" alt="xenos final page">
     </section>
 
-    <a href="index.html" class="tostart">Back to projects</a>
+    <section class="contactinfo">
+        <h2>
+            Contact me at:
+        </h2>
+        <h3>
+            Mail: CReedtz1@gmail.com <br>
+            Phone: 27512422 
+        </h3>
+    </section>
+
+
+    <a class="tostart" href="index.html">Back to projects</a>
 
     <section>
         <div class="xenosbar1"></div>
