--- a/space.html
+++ b/space.html
@@ -71,6 +71,17 @@
                 from our
                 mistakes</b> made in this project.</p>
     </section>
+    <section class="contactinfo">
+        <h2>
+            Contact me at:
+        </h2>
+        <h3>
+            Mail: CReedtz1@gmail.com <br>
+            Phone: 27512422 
+        </h3>
+    </section>
+
+
     <a class="tostart" href="index.html">Back to projects</a>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
     <script src="myjs.js"></script>
