Lavet kommentare, rytttet op og rettet få fejl

--- a/about.html
+++ b/about.html
@@ -18,8 +18,10 @@
 </head>
 
 <body>
+    <!-- Tilbage knap -->
     <a href="index.html"><img class="arrowback" src="images/arrowwest.svg" alt=""></a>
     <h1 class="projecth1 ml12 abouth1">Who am I?</h1>
+        <!-- Tekst og billede omkring hvem jeg er -->
     <img class="imgabout" src="/images/me.jpg" alt="image of me">
     <section class="projectsection aboutme">
         <p>
@@ -43,7 +45,7 @@
                <b>becoming a web developer.</b>
         </p>
     </section>
-    
+        <!-- Tekst omkring min uddannelse og jobs-->
     <section class="projectsection aboutsection">
         <h2 class="projecth2">
             Current Occupations:
@@ -92,6 +94,7 @@
             <h4>2018</h4>
         </div>
     </section>
+    <!-- Kontakt info -->
     <section class="contactinfo">
         <h2>
             Contact me at:
@@ -102,7 +105,7 @@
         </h3>
     </section>
 
-
+<!-- Ekstra tilbage til projekter knap til mobil -->
     <a class="tostart" href="index.html">Back to projects</a>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
     <script src="myjs.js"></script>
