--- a/index.html
+++ b/index.html
@@ -22,13 +22,16 @@
 </head>
 
 <body class="bimg">
+    <!-- Baggrundselement til at lave styling -->
     <div id="backgroundelement"></div>
     <h1 class="ml12">Casper Reedtz Andersen</h1>
     <h2 class="h2intro">CReedtz1@gmail.com</h2>
     <h3 class="h3intro">Student @ Zealand</h3>
+    <!-- Billede af mig -->
     <section>
         <img class="imgme" src="images/me.jpg" alt="Casper">
     </section>
+    <!-- Kort intro og link til hvem jeg er -->
     <section class="whoami">
         <h2 class="h2who">Who am I?</h2>
         <div class="borderwhobot" id="borderbot"></div>
@@ -37,6 +40,7 @@
             design & communication.</p>
             <a class="learnme" href="about.html">Learn more about me here!</a>
     </section>
+    <!-- Splitbar til design af desktop, samt tekst og pil der viser der er projekter-->
     <div class="frontsplitbar"></div>
     <section class="projectsintro">
         <h2>Projects</h2>
@@ -44,7 +48,7 @@
             <img src="images/arrowsouth.svg" alt="arrow pointing down">
         </div>
     </section>
-
+<!-- De forskellige projekter sat i grid -->
     <section class="projectgrid">
         <div class="project">
             <h2>Xenos</h2>
@@ -75,17 +79,17 @@
             <a href="space.html">More about Outer Travels here</a>
         </div>
     </section>
-
+<!-- Video -->
     <section class="project pvideo">
         <h2>Portrait of Martin (Danish)</h2>
         <h3>First ever video at Zealand</h3>
         <h3>Ended early October 2020</h3>
-        <iframe class="videoframe" src="https://www.youtube.com/embed/p2w84fZbufo" frameborder="0"
+        <iframe class="videoframe" src="https://www.youtube.com/embed/p2w84fZbufo"
         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
         allowfullscreen>
     </iframe>
     </section>
-
+<!-- Til top knap (kun mobil) -->
     <section>
         <a class="tostart" href="#top">To the top</a>
     </section>
