--- a/rhythm.html
+++ b/rhythm.html
@@ -18,12 +18,15 @@
 </head>
 
 <body>
+    <!-- Tilbage knap -->
     <a href="index.html"><img class="arrowback" src="images/arrowwest.svg" alt=""></a>
+    <!-- Overskrifter til projektet -->
     <h1 class="projecth1 ml12">Rhythm Studio</h1>
     <section class="projectsection">
         <h2 class="projecth2">Dance Project - Part 2</h2>
         <h3 class="projecth3">Lead coder & Organizer</h3>
         <h4 class="projecth4">For mobile and desktop</h4>
+        <!-- Intro og forklarende tekst til projektet + billede -->
         <p>This project was the <b>2nd part of our dance theme,</b> in this project we recieved <b>another groups
                 website,</b> had to
             work upon it and make it <b>responsive for desktop.</b> This projects theme was a <b>bollywood dancing
@@ -40,12 +43,14 @@
                 final moodboard.</b> </p>
         <img class="rhythmmood" src="/images/rhythmmood.png" alt="rhythm moodboard">
     </section>
+    <!-- Splitbar til design, samt pil der viser til mere -->
     <div class="rhythmsplitbar"></div>
     <div class="arrowcontinue">
         <div>
             <img src="images/arrowsouth.svg" alt="arrow pointing down to continue">
         </div>
     </div>
+    <!-- Mere tekst omkring projekt + billeder -->
     <section class="projectsection">
         <p>We then started <b>making sketches and wireframes</b> for our website, made some <b>final mockups</b> with
             our chosen
@@ -69,6 +74,7 @@
         </p>
         <img class="rhythmimg2" src="/images/rhythmdesk2.png" alt="rhythm desktop page">
     </section>
+    <!-- Kontakt info -->
     <section class="contactinfo">
         <h2>
             Contact me at:
@@ -79,7 +85,7 @@
         </h3>
     </section>
 
-
+    <!-- Ekstra tilbage knap til mobil -->
     <a class="tostart" href="index.html">Back to projects</a>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
