--- a/space.html
+++ b/space.html
@@ -18,12 +18,15 @@
 </head>
 
 <body>
+    <!-- Tilbage knap -->
     <a href="index.html"><img class="arrowback" src="images/arrowwest.svg" alt=""></a>
+    <!-- Overskrifter til projektet -->
     <h1 class="projecth1 ml12">Outer Travels</h1>
     <section class="projectsection">
         <h2 class="projecth2">Space Project</h2>
         <h3 class="projecth3">Project Leader and Designer</h3>
         <h4 class="projecth4">For desktop only</h4>
+        <!-- Forklarende tekst til projekt og billede-->
         <p>As our <b>first project,</b> Outer Travels was a space themed project, where we had to make a website around
             a
             company, that had some <b>product in space.</b> <br> <br> <b>My main role</b> in this project, was being the
@@ -42,12 +45,14 @@
         </p>
         <img class="spaceimg1" src="/images/space.png" alt="space outertravels home page">
     </section>
+    <!-- Splitbar til design med pil der viser til mere -->
     <div class="rhythmsplitbar"></div>
     <div class="arrowcontinue">
         <div>
             <img src="images/arrowsouth.svg" alt="arrow pointing down to continue">
         </div>
     </div>
+    <!-- Mere forklarende tekst og billeder -->
     <section class="projectsection">
         <p>
             We then had to <b>make a banner</b> and to not make the website totally black we
@@ -71,6 +76,7 @@
                 from our
                 mistakes</b> made in this project.</p>
     </section>
+    <!-- Kontakt info -->
     <section class="contactinfo">
         <h2>
             Contact me at:
@@ -81,7 +87,7 @@
         </h3>
     </section>
 
-
+    <!-- Ekstra tilbage knap til mobil -->
     <a class="tostart" href="index.html">Back to projects</a>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
     <script src="myjs.js"></script>
