--- a/swing.html
+++ b/swing.html
@@ -18,12 +18,15 @@
 </head>
 
 <body>
+    <!-- Tilbage knap -->
     <a href="index.html"><img class="arrowback" src="images/arrowwest.svg" alt=""></a>
+    <!-- Overskrifter til projektet -->
     <h1 class="projecth1 ml12">The Swinging <br> Shoes</h1>
     <section class="projectsection">
         <h2 class="projecth2">Dance Project - Part 2</h2>
         <h3 class="projecth3">Research & Design Managing</h3>
         <h4 class="projecth4">For mobile only</h4>
+        <!-- Forklarende tekst og billede -->
         <p>As this project was <b>our second project ever,</b> it was all about <b>learning</b> how to make a website
             for <b>mobile.</b> Our
             project theme this time, was about a <b>swingdance dance studio</b> and was the <b>first part</b> of our
@@ -42,12 +45,14 @@
         </p>
         <img class="swingimg1" src="/images/swingfarve.png" alt="swing color palette">
     </section>
+    <!-- Splitbar til design samt pil -->
     <div class="swingsplitbar"></div>
     <div class="arrowcontinue">
         <div>
             <img src="images/arrowsouth.svg" alt="arrow pointing down to continue">
         </div>
     </div>
+    <!-- Mere forklarende tekst samt billeder -->
     <section class="projectsection">
         <p class="swingp1"> Then it was <b>time for some sketching, wireframing and mockups,</b> trying to appeal to a
             <b>vintage crowd</b>
@@ -70,6 +75,7 @@
             <b>swapped our swingdance website with
                 another groups project,</b> see more about <b>part 2 in the Rhythm Studio project.</b></p>
     </section>
+    <!-- Kontakt info -->
     <section class="contactinfo">
         <h2>
             Contact me at:
@@ -80,7 +86,7 @@
         </h3>
     </section>
 
-
+    <!-- Ekstra tilbage knap til mobil -->
     <a class="tostart" href="index.html">Back to projects</a>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
     <script src="myjs.js"></script>
