--- a/xenos.html
+++ b/xenos.html
@@ -18,12 +18,15 @@
 </head>
 
 <body>
+    <!-- Tilbage knap -->
     <a href="index.html"><img class="arrowback" src="images/arrowwest.svg" alt=""></a>
+    <!-- Overskrifter til projektet -->
     <h1 class="projecth1 ml12">Xenos</h1>
     <section class="projectsection">
         <h2 class="projecth2">Car Brand Project</h2>
         <h3 class="projecth3">Brand identity, Content Manangement & Coding</h3>
         <h4 class="projecth4">Made for mobile and desktop</h4>
+        <!-- Forklarende tekst samt billede -->
         <p class="xenospintro">Xenos was a <b>2 part project</b> about making a car brand and website for it, <b>the
                 first
                 part</b>
@@ -45,13 +48,14 @@
                 environmentally conscious, craftsmen or early to middle aged family parrents.</b></p>
         <img class="xenosmood" src="/images/xenosmoodboard.png" alt="moodboard from xenos">
     </section>
+    <!-- Splitbar til design med pil -->
     <div class="xenossplitbar"></div>
     <div class="arrowcontinue">
         <div>
             <img src="images/arrowsouth.svg" alt="arrow pointing down to continue">
         </div>
-
     </div>
+    <!-- Forklarende tekst samt billeder -->
     <section class="projectsection">
         <p class="xenosp1">Now that we had a <b>clear vision</b> of what our brand should include, we started on our
             <b>design</b> and
@@ -83,7 +87,7 @@
                 errors.</b></p>
         <img class="xenosimg3" src="/images/xenoskampimg.png" alt="xenos final page">
     </section>
-
+    <!-- Kontakt info -->
     <section class="contactinfo">
         <h2>
             Contact me at:
@@ -94,9 +98,9 @@
         </h3>
     </section>
 
-
+    <!-- Ekstra tilbage knap til mobil -->
     <a class="tostart" href="index.html">Back to projects</a>
-
+    <!-- Ekstra design bar-->
     <section>
         <div class="xenosbar1"></div>
         <div class="xenosbar2"></div>
